name:                columbia-pacific
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gyg-ai/columbia-pacific#readme
license:             BSD3
license-file:        LICENSE
author:              gyg.ai
maintainer:          gygdotai@gmail.com
copyright:           2018 gyg.ai
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable columbia-pacific
  hs-source-dirs:      ., src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , scotty
                       , aeson
                       , text
                       , transformers
  ghc-options: -Wall